<resources>
    <string name="app_name">Sistem Pertahanan Tubuh</string>
    <string name="link_video_1"><b>Sistem Kekebalan Tubuh</b></string>
    <string name="link_video_2"><b>Sistem kekebalan tubuh: kekebalan bawaan dan adaptif:</b> </string>
    <string name="link_video_3"><b>Biologi Kelas 11: Sistem Pertahanan Tubuh Spesifik dan Sistem Pertahanan Non-Spesifik:</b></string>
    <string name="link_video_4"><b>Apa itu sel darah putih:</b> </string>
    <string name="link_video_5"><b>Apa itu Inflamasi?: </b></string>
    <string name="link_video_6"><b>Fagositosis sel darah putih: </b></string>
    <string name="link_video_7"><b>Hari kesehatan nasional: mengenal penyakit autoimun yang banyak tak disadari gejalanya: </b> </string>
    <string name="link_video_8"><b>Bagaimana Virus Corona Menyerang Sistem Kekebalan Tubuh: </b></string>
    <string name="link_video_9"><b>Cara meningkatkan sistem imun tubuh #BelajardiRumah: </b></string>
    <string name="link_gambar_1">Lapisan pertahanan tubuh terhadap penyakit. Sumber: <i> http://biologitopibiru.blogspot.com/2013/04/bagian-11-sistem-pertahanan-tubuh-pada.html. Diunduh 26 Januari 2021</i></string>
    <string name="link_gambar_2">Mekanisme pembentukan kekebalan tubuh. Sumber:https://docplayer.info/110358455-Sistem-pertahanan-tubuh-manusia.html. Diunduh 26 Januari 2021</string>
    <string name="link_gambar_3">Pertahanan tubuh non-spesifik (inflamasi) Sumber: https://www.nafiun.com/2012/12/pertahanan-tubuh-dengan-cara-peradangan-inflamatori.html. Diunduh 26 Januari 2021</string>
    <string name="link_gambar_4">Proses fagositosis Sumber: https://sandurezu.wordpress.com/2010/12/12/sistem-imunitas-alamiah-tubuh-non-spesifik/. 18 Januari 2021.</string>
    <string name="link_gambar_5">Makrofag yang sedang memakan patogen/bakteri Sumber: https://www.nafiun.com/2012/12/pertahanan-tubuh-dengan-cara-peradangan-inflamatori.html. Diunduh 26 Januari 2021</string>
    <string name="link_gambar_6">Mekanisme penghancuran bakteri oleh protein komplemen. Sumber:
https://www.nafiun.com/2012/12/sistem-pertahanan-tubuh-menggunakan-protein-pelindung.html. 18 Januari 2021.
</string>
    <string name="link_gambar_7">Gangguan sistem kekebalan tubuh berupa Alergi
Sumber:
https://tirto.id/daftar-obat-obat-alergi-dari-bahan-kimia-dan-alami-efnp. Diunduh pada 30 Januari 2021
</string>
    <string name="link_gambar_8">Penyakit autoimun: <i>Myasthenia gravis</i>
Sumber:
https://www.webmd.com/brain/ss/slideshow-myasthenia-gravis-guide. Diunduh pada 30 Januari 2021
</string>
    <string name="link_gambar_9">Penyakit autoimun: <i>Graves disease.</i>
Sumber:
https://www.healio.com/news/endocrinology/20200903/thyroid-eye-disease-present-in-40-of-people-with-graves-disease. Diunduh pada 30 Januari 2021
</string>
    <string name="link_gambar_10">Penyakit autoimun: Lupus.

Sumber:
https://www.medicinenet.com/systemic_lupus/article.htm. Diunduh pada 30 Januari 2021
</string>
    <string name="link_gambar_11">Imunodefisiensi primer, yakni <i>Severe Combined Immunodeficiency / (bubble boy disease)</i>
Sumber:
https://capitolweekly.net/state-targets-bubble-boy-syndrome/. Diunduh pada 30 Januari 2021
</string>
    <string name="link_gambar_12">Imunodefisiensi primer, yakni <i>Sindrom DiGeorge.</i>

Sumber:
https://doktersehat.com/digeorge-syndrome/. Diunduh pada 30 Januari 2021
</string>
    <string name="link_gambar_13">Imunodefisiensi sekunder, yakni Limfoma
Sumber:
https://akurat.co/id-319690-read-tidak-mau-terkena-limfoma-lakukan-hal-ini. Diunduh pada 30 Januari 2021
</string>
    <string name="sumber_buku"><b>Sumber Buku</b></string>
    <string name="sumber_buku1">Omegawati, W., dkk. 2020. <i>Biologi untuk SMA/MA peminatan
        matematika dan ilmu-ilmu alam.</i> Yogyakarta.
                     PT Penerbit Intan Pariwara.
    </string>
    <string name="sumber_buku2">Irnaningtyas. &amp; Istiadi, Y. 2016. <i>BIOLOGI untuk SMA/MA
        edisi revisi.</i> Jakarta. PT ERLANGGA.
    </string>
    <string name="sumber_inet"><b>Sumber Internet</b></string>
    <string name="sumber_inet1"><i>https://www.dictio.id/t/apa-saja-tanda-tanda-inflamasi/6353.</i> Diunduh pada 18 Januari 2021.</string>
    <string name="sumber_inet2"><i>https://sandurezu.wordpress.com/2010/12/12/sistem-imunitas-alamiah-tubuh-non-spesifik/.</i> Diunduh pada 18 Januari 2021.</string>
    <string name="sumber_inet3"><i>https://www.nafiun.com/2012/12/sistem-pertahanan-tubuh-menggunakan-protein-pelindung.html.</i> Diunduh pada 18 Januari 2021.</string>
    <string name="sumber_inet4"><i>https://www.nafiun.com/2012/12/struktur-dan-fungsi-molekul-antigen-dan-antibodi.html.</i> Diunduh pada 25 Januari 2021.</string>
    <string name="sumber_inet5"><i>https://www.nafiun.com/2012/12/struktur-dan-fungsi-molekul-antigen-dan-antibodi.html.</i> Diunduh pada 26 Januari 2021</string>
    <string name="sumber_inet6"><i>https://www.pelajaran.co.id/2018/07/pengertian-sifat-fungsi-struktur-dan-jenis-antibodi.html.</i> Diunduh pada 26 Januari 2021</string>
    <string name="petunjuk_pilgan">petunjuk pengerjaan: pilihlah satu jawaban yang paling benar!</string>
    <string name="tanya1"><b>Kondisi mata pada gambar di atas, disebabkan oleh adanya gangguan autoimun, yaitu:</b></string>
    <string name="tanya1_a"><b>a. antibodi TSI menyerang sel-sel di kelenjar tiroid</b></string>
    <string name="tanya1_b"><b>b. antibodi menyerang reseptor asetilkolin</b></string>
    <string name="tanya1_c"><b>c. antibodi menyerang sel-sel beta pankreas</b></string>
    <string name="tanya1_d"><b>d. antibodi menyerang selubung mielin di sel saraf</b></string>
    <string name="tanya1_e"><b>e. mastosit memicu peradangan di persendian</b></string>
    <string name="heroes_name">Satu</string>
    <string name="aper_1">Pertemuan pertama: Kasus pertama Covid-19 di indonesia dilaporkan pada tanggal 2 Maret 2020. Covid-19 pertama kali muncul di Kota Wuhan, Cina, virus ini menyebabkan banyak korban jiwa. Salah satu cara yang dapat dilakukan untuk melawan Covid-19 adalah memperkuat sistem pertahanan tubuh kita. Adakah yang dapat menjelaskan bagaimana sistem pertahanan tubuh kita dalam melawan virus Corona?  "</string>
    <string name="aper_2">Pertemuan kedua: <br></br> Perhatikan gambar dibawah ini!
 </string>
    <string name="aper_21">Penyakit apa yang diderita balita tersebut? mengapa balita tersebut dapat terkena penyakit tersebut? Menurut Anda, upaya apa yang harus dilakukan untuk mengatasi penyakit tersebut?</string>
    <string name="penguatan_1">"Ayooo!!! \n biasakan membaca 10 sampai 15 menit sebelum pelajaran dimulai!! "</string>
    <string name="penguatan_2">"Vaksinasi DNA \n
Vaksinasi DNA merupakan teknik yang digunakan untuk mengingkatkan respon kekebalan tubuh melalui injeksi plasmid yang telah mengalami rekayasa genetik. Plasmid yang digunakan dalam vaksin ini memiliki urutan basa nukleotida untuk mengode antigen yang menjadi sasaran sistem kekebalan tubuh. DNA plasmid tersebut akan masuk ke dalam sel dan diterjemahkkan menjadi protein antigen. Akibatnya, tubuh menghasilkan respon kekebalan. Vaksin DNA memiliki banyak keunggulan dibanding waksin konvensional karena mampu menghasilkan lebih banyak jenis respon kekebalan tubuh. Vaksin DNA yang berhasil dikembangkan yakni vaksin dengue, vaksin influenza, vaksin SARS-CoV, vaksin HIV, dan yang terakhir adalah vaksin COVID-19.
"</string>
    <string name="penguatan_3">"Dapatkah plasma darah jadi pengobatan sementara pasien Covid-19? Bagaimana pendapat kalian? Apakah kalian setuju atau ada pendapat lain mengenai pernyataan di atas?? Berikan opinimu! Klik link berikut : http://gg.gg/Kuis-1-Penguatan-Karakter"</string>
    <string name="message">tulis pesanmu</string>
    <string name="content_mekanisme">Berdasarkan cara tubuh mempertahankan diri dari penyakit, tubuh manusia memiliki 2 macam mekanisme pertahanan tubuh, yaitu <b>pertahanan non-spesifik (alamiah) dan pertahanan spesifik (adaptif).</b></string>
    <string name="pilih_button">Silahkan memilih button di bawah ini untuk melihat penjelasan!</string>
    <string name="penguatan4">Sindrom Stevens Johnson (SSJ) \n Sindrom stevens johnson (SSJ) merupakan penyakit kulit dan mukosa yang sangat berbahaya karena dapat menyebabkan kematian. Hal tersebut dikarenakan sel-sel kulit bagian epidermis mengelupas sehingga menampilkan bagian sel dermis, dengan gejala bercak kemerahan pada kulit, pendarahan di bawah kulit, serta luka bakar pada penderitanya. Sindrom Stevens Johnson (SSJ) tidak termasuk dalam penyakit menular, tetapi penyakit yang dipicu oleh reaksi berlebih dari obat tertentu (alergi obat). Pada banyak kasus, beberapa jenis obat yang sering menjadi pemicu, antara lain: penisilin, metamizol, parasetamol, dan turunan dari obat-obat tersebut. Sindrom Stevens Johnson (SSJ) dapat dicegah dengan tidak mengonsumsi obat-obatan sembarangan dan memberitahukan kepada dokter jika memiliki alergi terhadap obat tertentu, makanan, atau bahan-bahan kimia tertentu.</string>
    <string name="penguatan_5">Fakta Menarik Sistem Kekebalan Tubuh \n Sistem kekebalan tubuh berfungsi melindungi tubuh dari berbagai penyakit, berikut fakta unik mengenai sistem pertahanan tubuh: (1) Setiap bagian sistem pertahanan tubuh memiliki fungsi masing-masing, (2) Kita bertemu ribuan kuman setiap hari, tetapi tidak semuanya berbahaya, (3) Menerapkan hidup sehat dan selalu berpikir positif dapat meningkatkan sistem kekebalan tubuh, (4) Vaksin berperan penting pada sistem kekebalan tubuh, dan (5) Sistem pertahanan tubuh dapat menyerang diri sendiri, penyakit tersebut yakni autoimun. Temukan fakta-fakta unik sistem kekebalan tubuh lainnya versi kalian.</string>
    <string name="pee1">Silahkan install aplikasi e-modul di handphone android Anda dengan mengklik https://drive.google.com/file/d/14k-wxzbcuRofSeHCk4vPMIHgyejxDJvg/view?usp=drive_web</string>
    <string name="pe2">Setelah install aplikasi E-Modul selesai, geser Tampilan awal E-Modul ke kiri untuk membuka menu home pada E-Modul untuk masuk ke menu home.</string>
    <string name="pe3">Pada menu home terdapat beberapa menu yang dapat teman-teman pilih untuk lebih memahami tujuan dari E-Modul sistem pertahanan tubuh. Pilihlah menu sesuai dengan kebutuhan dengan mengklik pilihan menu yang tersedia pada E-Modul. Untuk kembali ke menu home teman-teman dapat mengklik menu back yang terdapat pada pojok kanan bawah menu.</string>
    <string name="pe4">Klik menu dengan icon lampu untuk melihat menu penguatan karakter, menu gambar, dan menu video pembelajaran. untuk kembali ke menu home teman-teman dapat mengklik icon rumah.</string>
    <string name="pe5">Klik menu dengan icon buku untuk mengetahui materi apa saja yang akan dipelajari pada materi sistem pertahanan tubuh. Setelah selesai membaca satu sub-materi silahkan klik icon buku untuk kembali ke menu materi, dan bila sudah selesai membaca keseluruhan materi teman-teman dapat mengklik icon rumah untuk kembali ke menu home.</string>
    <string name="pe7">Klik menu dengan icon karakter untuk mengetahui pengembang E-Modul sistem pertahanan tubuh. untuk kembali ke menu home teman-teman dapat mengklik icon back.</string>
    <string name="pe8">Pada menu home terdapat icon pesawat kertas yang terletak dipojok kanan atas. Klik menu tersebut untuk membuat topik diskusi terkait materi yang belum dipahami dengan memasukkan nomor siswa sebagai identitas. Setelah selesai membuat topik diskusi klik menu kembali pada hp teman-teman untuk kembali ke menu home.</string>
    <string name="pe9">Setelah selesai menggunakan E-Modul, klik menu kembali pada hp teman-teman untuk keluar dari aplikasi E-Modul.</string>
    <string name="pe10">Selamat Belajar.</string>
</resources>