<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/Theme.AppCompat.NoActionBar"
    android:background="@drawable/back_petunjuk">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <ScrollView
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:background="@color/tes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TableRow
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="1."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:onClick="tombol1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pee1"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="2."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pe2"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="3."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pe3"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="4."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pe4"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="5."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pe5"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="6."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pe7"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="7."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pe7"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="8."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pe8"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="9."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pe9"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="10."
                        android:justificationMode="inter_word"
                        android:padding="2dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/pengantarid"
                        android:justificationMode="inter_word"
                        android:lineSpacingExtra="5dp"
                        android:padding="2dp"
                        android:text="@string/pe10"
                        android:textColor="@color/black"
                        android:textSize="16sp"/>
                </TableRow>
            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/ln1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="5dp"
            android:scaleX="1"
            android:scaleY="1">

            <ImageView
                android:id="@+id/btnbck"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:background="@drawable/button_back"></ImageView>

        </LinearLayout>
    </RelativeLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

